--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -320,6 +320,7 @@ scrape_configs:
         - 'etcd_disk_backend_commit_duration_seconds_bucket'
         - 'kube_daemonset_status_current_number_scheduled'
         - 'kube_daemonset_status_desired_number_scheduled'
+        - 'kube_daemonset_updated_number_scheduled'
         - 'kube_deployment_status_replicas'
         - 'kube_deployment_spec_replicas'
         - 'kube_pod_info'
