--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1282,13 +1282,16 @@ groups:
         pod is scheduled on. Check the status of the pod itself, if it exists.
       dashboard: https://grafana.mlab-staging.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
 
-  # A DaemonSet rollout is progressing too slowly.
+  # A DaemonSet rollout is progressing too slowly. Unless 95% of a DaemonSet's
+  # pods are updated, then fire an alert if the rate of increase over the last
+  # hour is less than or equal to 2. This is pretty conservative since NDT pods
+  # should update at something more like ~24 per hour.
   - alert: PlatformClustser_RolloutTooSlowOrStuck
     expr: |
-      delta(kube_daemonset_updated_number_scheduled[1h]) < 2 unless (
-        (kube_daemonset_status_desired_number_scheduled - kube_daemonset_updated_number_scheduled) < 4
+      kube_daemonset_updated_number_scheduled - (kube_daemonset_updated_number_scheduled offset 1h) <= 2 unless (
+        kube_daemonset_updated_number_scheduled / kube_daemonset_status_desired_number_scheduled > 0.95
       )
-    for: 30m
+    for: 1h
     labels:
       repo: ops-tracker
       severity: ticket
