--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -348,6 +348,20 @@ groups:
         monitoring.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/tZHLFQRZk/k8s-workload-overview
 
+# Too many NDT S2C tests on a node are being impacted by switch discards.
+  - alert: PlatformCluster_TooManyNdtS2cTestsWithDiscards
+    expr: (bq_ndt_s2c_with_discards / bq_ndt_s2c_total) > 0.05
+    for: 10m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: More than 5% of NDT tests in a 24h period were affected by discards.
+      description: Too many NDT S2C tests in a 24h period (BQ partition_date)
+        were affected by switch discards on {{ $labels.node }}. The switch may
+        be overloaded, or TCP pacing may be misconfigured on the node.
+      dashboard: https://grafana.mlab-sandbox.measurementlab.net/d/SuqnZ6Hiz/ops-switch-overview
+
 # HTTP per-status response count is exported by stackdriver. By querying
 # stackdriver metrics, we can alert if the server-side errors rate for mlab-ns
 # is too high or if the service is unavailable.
