--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -32,6 +32,11 @@ route:
   # When no other routes match, use the default receiver.
   receiver: slack-alerts-ticket
 
+  routes:
+  - receiver: 'pagerduty-pages'
+    continue: true
+    match:
+      severity: page
 
 # When two alerts are firing at the same time, we can "inhibit" one based on
 # the other. For example, a host is offline and a service on that host is not
@@ -75,7 +80,7 @@ inhibit_rules:
 # platform cluster scrape job is down.
 - source_match:
     alertname: 'PlatformCluster_FederationScrapeJobFailing'
-  taret_match_re:
+  target_match_re:
     alertname: 'PlatformCluster_.+Missing'
   equal: ['cluster']
 
@@ -134,3 +139,8 @@ receivers:
   # All alerts sent to slack are also sent to the github webhook receiver.
   webhook_configs:
   - url: '{{GITHUB_RECEIVER_URL}}'
+
+- name: 'pagerduty-pages'
+  pagerduty_configs:
+  - send_resolved: true
+    service_key: {{PAGERDUTY_SERVICE_KEY}}
