--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -24,6 +24,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_annotation.sql",
                 "--type=gauge", "--query=/queries/bq_gardener_parse_time.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_server.sql",
+                "--type=gauge", "--query=/queries/bq_ndt_s2c.sql",
               ]
         ports:
         - containerPort: 9050
