Further reduce number of alerts with severity=page.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -591,7 +591,7 @@ groups:
     for: 2h
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Test data volume today is less than 70% of nominal daily volume.
       description: Are machines online? Is data being collected? Is pusher working?
@@ -869,7 +869,7 @@ groups:
     for: 1m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: The Prometheus persistent disk has less than 5% free space.
       description: The Prometheus persistent disk has less than 5% free space.
@@ -1116,7 +1116,7 @@ groups:
     for: 5m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: At least one etcd cluster member has no leader.
       description: An etcd cluster member is reporting that it has no leader.
