PlatformCluster_FederationScrapeJobFailing has severity=ticket now.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -832,7 +832,7 @@ groups:
     for: 4m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Federation scraping of the k8s platform cluster is down.
       description: Scraping of Prometheus on the platform cluster is down.
@@ -852,7 +852,7 @@ groups:
     for: 4m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Federation scraping of the k8s platform cluster is missing.
       description: A scrape job for the k8s platform cluster is missing. This
