--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -613,8 +613,7 @@ groups:
       severity: ticket
     annotations:
       summary: The number of go routine is too high.
-      description: Check whether there is fd leak in go routine.
-      dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik
+      description: Check whether the number of go routine is too high.
 
 # Too many NDT S2C tests on a node are being impacted by switch discards.
   - alert: DataQuality_TooManyNdtS2cTestsWithDiscards
