--- a/config/federation/grafana/provisioning/datasources/data-processing_mlab-sandbox.yml.template
+++ b/config/federation/grafana/provisioning/datasources/data-processing_mlab-sandbox.yml.template
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://34.74.65.54:9090
+  url: http://prometheus-data-processing.mlab-sandbox.measurementlab.net:9090
   # <bool> mark as default datasource. Max one per org
   isDefault: {{IS_DEFAULT}}
   version: 1
