Add comment about the scheduled time

--- a/k8s/prometheus-federation/deployments/gcs-exporter.yml
+++ b/k8s/prometheus-federation/deployments/gcs-exporter.yml
@@ -19,6 +19,8 @@ spec:
       - name: gcs-exporter
         image: measurementlab/gcs-exporter:v0.1
         args:
+        # NOTE: -time must not be less than the scheduled transfer times from:
+        # https://github.com/m-lab/gcp-config/blob/master/daily-archive-transfers.yaml
         - -time=4h30m
         - -source=pusher-{{GCLOUD_PROJECT}}
         - -source=archive-{{GCLOUD_PROJECT}}
