Set the 'machine' label equal to the 'node' label, if the label 'node' exists.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -353,6 +353,21 @@ scrape_configs:
         target_label: experiment
         replacement: ndt.iupui
 
+      # Rewrite the machine label to make it easier to join these metrics with
+      # existing metrics that use machine instead of the node label.
+      #
+      # NOTE: Relabeling that happens in the Prometheus instance in the
+      # platform cluster automatically creates a "machine" label from the value
+      # of "__meta_kubernetes_pod_node_name". In some cases, the value of that
+      # label is not representative of the "node" we have in mind, but instead
+      # will be, for example, "prometheus-platform-cluster".  We want the
+      # "machine" and "node" labels to always be the same, to the extent
+      # possible. Overwriting "machine" here with "node" helps to ensure that
+      # _if_ a "node" label exists the "machine" label will always be the same.
+      - source_labels: [node]
+        action: replace
+        target_label: machine
+
   # Scrape config for the node_exporter on eb.measurementlab.net.
   - job_name: 'eb-node-exporter'
     static_configs:
