Adds missing closing curly brace to expressions.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -424,8 +424,8 @@ groups:
 # are always present.
   - alert: MlabNS_GenericMetricsMissing
     expr: |
-      absent(node_filesystem_size_bytes{cluster="platform-cluster", mountpoint="/cache/data")
-        or absent(node_filesystem_avail_bytes{cluster="platform-cluster", mountpoint="/cache/data")
+      absent(node_filesystem_size_bytes{cluster="platform-cluster", mountpoint="/cache/data"})
+        or absent(node_filesystem_avail_bytes{cluster="platform-cluster", mountpoint="/cache/data"})
         or absent(kube_node_spec_taint{cluster="platform-cluster"})
         or absent(lame_duck_experiment{cluster="platform-cluster"})
         or absent(gmx_machine_maintenance)
