Makes regexp used to populate the machine label be v2-name-compatible.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -373,7 +373,7 @@ scrape_configs:
       # possible. Overwriting "machine" here with "node" helps to ensure that
       # _if_ a "node" label exists the "machine" label will always be the same.
       - source_labels: [node]
-        regex: (mlab[1-4]\.[a-z]{3}[0-9tc]{2}\.measurement-lab\.org)
+        regex: (mlab[1-4][.-][a-z]{3}[0-9tc]{2}.*)
         action: replace
         target_label: machine
 
